...
private fun navItems(): List<NdNavItem> =
    listOf(
        NdNavItem(
            label = stringResource(Res.string.nav_feeds),
            icon = NdIcons.DynamicFeed,
            iconSelected = NdIcons.DynamicFeedFilled,
            testTag = "nav_feeds",
        ),
        NdNavItem(
            label = stringResource(Res.string.nav_library),
            icon = NdIcons.GridView,
            iconSelected = NdIcons.GridViewFilled,
            testTag = "nav_library",
        ),
        NdNavItem(
            label = stringResource(Res.string.nav_up_next),
            icon = NdIcons.QueueMusic,
            iconSelected = NdIcons.QueueMusicFilled,
            testTag = "nav_up_next",
...
